# Simulation-and-Control-of-Autonomous-UAVs-for-Package-delivery-with-obstacle-avoidance

Autopilot/major_tom_offboard/: mt_offboard_control.cpp
Vision System/major_tom_cpp/: CMakeLists.txt  package.xml
Vision System/major_tom_cpp/src/: obj.names  show_img.cpp  yolov4.cfg
